# p2000c-emulator

./: .clang-format  .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  THIRD_PARTY.md  p2edit-tools.flp
.github/workflows/: build-and-package.yml  release.yml
audio/: LICENSE-MAME-SAMPLES.txt
cmake/: verify_install.cmake
docs/: hardware.md  rom_dump.md
icons/: LICENSE-FONT-AWESOME.txt
images/: chess.flp  p2kc_sys.imd  system.flp  zork.flp
images/cpm/: copower-boot.flp  ipldump.flp  p2edit.flp  p2file.flp  p2util.flp
images/msdos/: copower-msdos-2.11.flp
images/msdos/applications/: masm-3.01.flp  turbo-c-2.01-cli.flp
media/: README.md
media/files/chess/: CHESS.COM
media/files/core/: CBIOS61.COM  CBIOS62.COM  CBIOS63.COM  CONFIG.COM  CONFIG.MSG  CPM61.COM  CPM62.COM  CPM63.COM  SYSGEN.COM
media/floppies/: COPOWER.IMD  COPOWERC.IMD
media/system/: p2000c-ab-cdef.trk
packaging/: AppRun  org.p2000c.emulator.desktop
packaging/vcpkg-triplets/: p2000c-arm64-osx.cmake  p2000c-x64-osx.cmake
src/app/: display_widget.cpp  display_widget.h  fast_boot_controller.cpp  fast_boot_controller.h  hardware_audio.cpp  hardware_audio.h  main.cpp  main_window.cpp  main_window.h  screen_color_dialog.cpp  screen_color_dialog.h
src/core/: copower_board.cpp  copower_board.h  imd_image.cpp  imd_image.h  p2000c_machine.cpp  p2000c_machine.h  raw_disk_image.cpp  raw_disk_image.h  terminal.cpp  terminal.h
tests/: check_cli.cmake  check_copower.cmake  check_cpm_asm.cmake  check_ipldump.cmake  check_masm.cmake  check_msboot.cmake  check_p2edit.cmake  check_p2file.cmake  check_turbo_c.cmake  copower_board_test.cpp  fast_boot_controller_test.cpp  imd_image_test.cpp  main_window_test.cpp  p2000c_machine_test.cpp  raw_disk_image_test.cpp
tools/: README.md  build_media.py  media_info.cpp  p2000c_cli.cpp
tools/build_media/: build_media.py
tools/imd_to_flp/: imd_to_flp.cpp
tools/ipldump/: IPLDUMP.ASM
tools/media_info/: media_info.cpp
tools/p2000c_cli/: p2000c_cli.cpp
tools/p2edit/: P2EDIT.ASM  README.md  build.sh
tools/p2file/: P2FILE.ASM  README.md  build.sh
tools/p2util/: README.md  build.sh
